Added new design

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,32 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#e64a19"
-        android:padding="@dimen/inner_frame_layout_padding">
+        android:background="#111111">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="#212121">
+
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp"
+                android:text="00"
+                android:textSize="35sp" />
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha="0.05"
+            android:backgroundTint="@color/black"
+            android:backgroundTintMode="add"
+            android:src="@drawable/reaper" />
 
         <TextView
             android:id="@+id/tv_time"
@@ -21,19 +45,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="65dp"
-            android:text="00:00"
-            android:textSize="50sp" />
 
-        <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="121dp"
-            android:text="00"
-            android:textSize="24sp" />
+            android:layout_marginTop="104dp"
+            android:text="00:00"
+            android:textSize="40sp" />
 
     </RelativeLayout>
 </android.support.wear.widget.BoxInsetLayout>
